{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 510,
  "lineage": "bfd34f05-9880-a2c0-b28e-881845e7d0fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "ISE_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:426391735648:route-table/rtb-0af44dfe3d6aefbfb",
            "default_route_table_id": "rtb-0af44dfe3d6aefbfb",
            "id": "rtb-0af44dfe3d6aefbfb",
            "owner_id": "426391735648",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0196b88100fc0ec37",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ISE_routetable"
            },
            "tags_all": {
              "Name": "ISE_routetable"
            },
            "vpc_id": "vpc-085771506208a66d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ISE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ISE_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef2cc6c45ca5fc1f",
            "arn": "arn:aws:ec2:us-west-2:426391735648:instance/i-0b2f4b064a96f4a5c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2f4b064a96f4a5c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00097a6951d6ddc22",
            "private_dns": "ip-10-0-1-205.us-west-2.compute.internal",
            "private_ip": "10.0.1.205",
            "public_ip": "34.213.245.66",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 900,
                "throughput": 0,
                "volume_id": "vol-0d9f1ca6b62d3e0c8",
                "volume_size": 300,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc30ccbd5d5b9797",
            "tags": {
              "Name": "ISE_3.1_Server"
            },
            "tags_all": {
              "Name": "ISE_3.1_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ecb1748048e3a1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.ISE_SG",
            "aws_subnet.ISE_subnet",
            "tls_private_key.pk"
          ],
          "create_before_destroy": true
        },
        {
          "status": "tainted",
          "deposed": "8242ec14",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef2cc6c45ca5fc1f",
            "arn": "arn:aws:ec2:us-west-2:426391735648:instance/i-09ef244ddd7e52971",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ef244ddd7e52971",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df259d5165deb69b",
            "private_dns": "ip-10-0-1-165.us-west-2.compute.internal",
            "private_ip": "10.0.1.165",
            "public_ip": "18.236.233.51",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 900,
                "throughput": 0,
                "volume_id": "vol-0898738c4c8944585",
                "volume_size": 300,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc30ccbd5d5b9797",
            "tags": {
              "Name": "ISE_3.1_Server"
            },
            "tags_all": {
              "Name": "ISE_3.1_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ecb1748048e3a1a"
            ]
          },
          "dependencies": [
            "aws_vpc.ISE_VPC",
            "tls_private_key.pk",
            "aws_key_pair.deployer",
            "aws_security_group.ISE_SG",
            "aws_subnet.ISE_subnet"
          ],
          "create_before_destroy": true
        },
        {
          "status": "tainted",
          "deposed": "d3a559bf",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef2cc6c45ca5fc1f",
            "arn": "arn:aws:ec2:us-west-2:426391735648:instance/i-0a4006e9422c8c898",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4006e9422c8c898",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-090bf26d162fe9850",
            "private_dns": "ip-10-0-1-202.us-west-2.compute.internal",
            "private_ip": "10.0.1.202",
            "public_ip": "52.26.118.212",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 900,
                "throughput": 0,
                "volume_id": "vol-00f181a441214e17b",
                "volume_size": 300,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc30ccbd5d5b9797",
            "tags": {
              "Name": "ISE_3.1_Server"
            },
            "tags_all": {
              "Name": "ISE_3.1_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ecb1748048e3a1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.ISE_SG",
            "aws_subnet.ISE_subnet",
            "aws_vpc.ISE_VPC",
            "tls_private_key.pk"
          ],
          "create_before_destroy": true
        },
        {
          "status": "tainted",
          "deposed": "e7d2706e",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ef2cc6c45ca5fc1f",
            "arn": "arn:aws:ec2:us-west-2:426391735648:instance/i-071bf0290b65e7bb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071bf0290b65e7bb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bfff25324abb83b9",
            "private_dns": "ip-10-0-1-73.us-west-2.compute.internal",
            "private_ip": "10.0.1.73",
            "public_ip": "54.201.22.46",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 900,
                "throughput": 0,
                "volume_id": "vol-0f901c644b1d49ae1",
                "volume_size": 300,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc30ccbd5d5b9797",
            "tags": {
              "Name": "ISE_3.1_Server"
            },
            "tags_all": {
              "Name": "ISE_3.1_Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ecb1748048e3a1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.ISE_SG",
            "aws_subnet.ISE_subnet",
            "aws_vpc.ISE_VPC",
            "tls_private_key.pk"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:426391735648:internet-gateway/igw-0196b88100fc0ec37",
            "id": "igw-0196b88100fc0ec37",
            "owner_id": "426391735648",
            "tags": {
              "Name": "ISE_IGW"
            },
            "tags_all": {
              "Name": "ISE_IGW"
            },
            "vpc_id": "vpc-085771506208a66d6"
          },
          "dependencies": [
            "aws_vpc.ISE_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ISE_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:426391735648:security-group/sg-05ecb1748048e3a1a",
            "description": "Allow inbound traffic to ISE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ecb1748048e3a1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to ISE VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ISE_SG",
            "name_prefix": "",
            "owner_id": "426391735648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ISE_SG"
            },
            "tags_all": {
              "Name": "ISE_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-085771506208a66d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ISE_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ISE_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:426391735648:subnet/subnet-0dc30ccbd5d5b9797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dc30ccbd5d5b9797",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "426391735648",
            "tags": {
              "Name": "ISE_subnet"
            },
            "tags_all": {
              "Name": "ISE_subnet"
            },
            "vpc_id": "vpc-085771506208a66d6"
          },
          "dependencies": [
            "aws_vpc.ISE_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ISE_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:426391735648:vpc/vpc-085771506208a66d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096c3fd2697e84f51",
            "default_route_table_id": "rtb-0af44dfe3d6aefbfb",
            "default_security_group_id": "sg-0cb6a03f8c9d82196",
            "dhcp_options_id": "dopt-ad580fd5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-085771506208a66d6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0af44dfe3d6aefbfb",
            "owner_id": "426391735648",
            "tags": {
              "Name": "ISE VPC"
            },
            "tags_all": {
              "Name": "ISE VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}